--- a/app_sqflite/pubspec.yaml
+++ b/app_sqflite/pubspec.yaml
@@ -1,6 +1,6 @@
 name: tekartik_app_flutter_sqflite
 description: Sqflite common initialization for flutter
-version: 0.5.1
+version: 0.6.0
 publish_to: none
 
 environment:
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite: '>=2.0.0+1'
+  sqflite_common_ffi_web:
   sqflite_common_ffi: '>=2.0.0'
   sqflite_common: '>=2.0.0+1'
   process_run:
