--- a/app_intl/pubspec.yaml
+++ b/app_intl/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  path:
   flutter:
     sdk: flutter
   tekartik_app_intl:
@@ -19,7 +20,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: '>=1.0.0'
 
 # tmp
 dependency_overrides:
