--- a/example/test_app/pubspec.yaml
+++ b/example/test_app/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: '>=1.0.0'
   tekartik_prefs_test_app_lib:
     path: ../prefs_test_app_lib
   tekartik_idb_test_app_lib:
